优化代理与Bean实例化逻辑并修复Metaspace泄漏问题： 1. 新增ClassFieldCache类缓存类字段信息避免重复反射 2. 为AbstractProxyFactory添加doClose扩展方法，各代理工厂实现缓存清理 3. 优化BeanMeta实例化锁机制，替换synchronized为ReentrantLock 4. 替换非并发集合为并发集合提升线程安全性 5. 重构代理过滤逻辑为独立类，优化Bean实例化创建方式