@@ -24,7 +24,10 @@ import net.ymate.platform.core.beans.proxy.AbstractProxyFactory;
 import net.ymate.platform.core.beans.proxy.IProxy;
 import net.ymate.platform.core.beans.proxy.IProxyMethodParamHandler;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * @author 刘镇 (suninformation@163.com) on 2018/11/8 3:01 AM
@@ -32,16 +35,29 @@ import java.util.List;
  */
 public class JavassistProxyFactory extends AbstractProxyFactory {
 
+    /**
+     * 代理类缓存（避免重复为目标类生成代理类导致 Metaspace 泄漏）
+     */
+    private final Map<Class<?>, Class<?>> proxyClassCache = new ConcurrentHashMap<>();
+
+    @Override
+    protected void doClose() throws Exception {
+        proxyClassCache.clear();
+    }
+
     @SuppressWarnings("unchecked")
     private <T> T doCreateProxy(Class<?> targetClass, MethodHandler methodHandler) {
-        ProxyFactory factory = new ProxyFactory();
-        factory.setSuperclass(targetClass);
-        Class<?> clazz = factory.createClass();
+        Class<?> clazz = proxyClassCache.computeIfAbsent(targetClass, key -> {
+            ProxyFactory factory = new ProxyFactory();
+            factory.setSuperclass(key);
+            return factory.createClass();
+        });
         try {
-            Object targetObj = clazz.newInstance();
+            Object targetObj = clazz.getDeclaredConstructor().newInstance();
             ((Proxy) targetObj).setHandler(methodHandler);
             return (T) targetObj;
-        } catch (IllegalAccessException | InstantiationException e) {
+        } catch (IllegalAccessException | InstantiationException | InvocationTargetException |
+                 NoSuchMethodException e) {
             throw RuntimeUtils.wrapRuntimeThrow(e);
         }
     }
